--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,4 @@
-.price{
-    margin-top: 50px;
-    align-items: center;
-    color: blue;
-    margin-left: 5px;
-    font-size: larger;
-   
-}
 
-.move{
-   
-   
-   
-    margin-left: 200px;
-}
 .h1{
     font-size: x-large;
     color: purple
@@ -20,4 +6,15 @@
 
 .text{
     background-color:black;
+   
+}
+
+.h2{
+    margin-left: 200px;
+    margin-top: -230px
+    
+
+}
+.move{
+    margin-left: -200px
 }
